<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favor"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selectionsFragment"
        android:icon="@drawable/ic_video"
        android:title="@string/selections"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/laterFragment"
        android:icon="@drawable/ic_watch_later"
        android:title="@string/later"
        app:showAsAction="withText"/>
</menu>