<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SelectionsFragment"
    android:id="@+id/selections_fragment_root"
    android:visibility="invisible"
    tools:visibility="visible"
    android:orientation="vertical"
    android:background="@drawable/background_selections">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/selection_item" />
</LinearLayout>